# road-accidents-fr

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  jupytext.yml  makefile  requirements.txt  streamlit_app.py
.github/workflows/: code-quality.yml  pylint.yml  tests.yml
code/: nb_1.ipynb  nb_1.py  nb_1_view.ipynb  nb_2.ipynb  nb_2.py  nb_2_view.ipynb  nb_3.py  nb_3_view.ipynb  roafr_utils.py  utils.py
data/: df.check
data/annual_accidents/2012/: lieux_2012.csv  vehicules_2012.csv
data/annual_accidents/2015/: lieux_2015.csv  vehicules_2015.csv
data/annual_accidents/2017/: lieux-2017.csv
data/etc/: donnees_departements.csv  lockdown_trend.csv
data/processed/: Xy_test.check  Xy_test.parquet  Xy_train.check  Xy_train.parquet
data/raw/annual_accidents/2009/: lieux_2009.csv
data/raw/annual_accidents/2010/: lieux_2010.csv
data/raw/annual_accidents/2011/: lieux_2011.csv  vehicules_2011.csv
data/raw/annual_accidents/2013/: caracteristiques_2013.csv  lieux_2013.csv  vehicules_2013.csv
html/: map.html
notebooks/: VIEW_nb_1.ipynb  VIEW_nb_2.ipynb  VIEW_nb_3.ipynb  VIEW_nb_4.ipynb  nb_1.py  nb_1_view.ipynb  nb_2.py  nb_2_view.ipynb  nb_3.py  nb_3_view.ipynb  nb_4.py  nb_4_view.ipynb
notebooks/parameters/: TEST_params_nb_1.yaml  TEST_params_nb_3.yaml  TEST_params_nb_4.yaml  VIEW_params_nb_1.yaml
roaf/: setup.py
roaf/roaf/: data.py  visualization.py
src/: pyproject.toml
src/roaf/: data.py  parameterization.py  visualization.py
streamlit/: README.md  requirements.txt  streamlit_app.py
(+7 files in other folders)
